<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Cru Central Coast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_events">Events</string>
    <string name="prayer_requests">Prayer Requests</string>
    <string name="nav_cruber">Cruber</string>
    <string name="nav_summer_missions">Summer Missions</string>
    <string name="nav_get_involved">Get Involved</string>
    <string name="nav_community_group">Connect to a Community Group</string>
    <string name="community_groups">Community Groups</string>
    <string name="nav_ministry_team">Join a Ministry Team</string>
    <string name="ministry_teams">Ministry Teams</string>
    <string name="nav_resources">Resources</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_videos">YouTube</string>
    <string name="nav_tools">Tools</string>
    <string name="menu_add_event">Add Random Event</string>
    <string name="menu_refresh">Refresh</string>
    <string name="articles_ct_button">Read Article</string>
    <string name="central_coast">CENTRAL COAST</string>
    <string name="done">DONE</string>
    <string name="going">Attending</string>
    <string name="interested">Interested</string>
    <string name="no_reply">No Reply</string>
    <string name="facebook_app_id">544416192400105</string>
    <string name="rsvp_title">Set RSVP Status</string>
    <string name="select_gender">Select Gender</string>
    <string name="preferred_driver_gender">Select Preferred Driver Sex</string>
    <string name="select_car_capacity">Select Car Capacity</string>
    <string name="select_trip_type">Select Trip Type</string>
    <string name="select_circle_radius">Select Circle Radius</string>
    <string name="enter_location">Enter Pickup Location</string>
    <string name="close">Close</string>
    <string name="next">NEXT</string>
    <string name="previous">PREVIOUS</string>
    <string name="skip">Skip</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="edit">Edit</string>
    <string name="driver_signup">Driver Signup</string>
    <string name="passenger_signup">Find a Ride</string>
    <string name="cancel">Cancel</string>
    <string name="kick">Kick</string>
    <string name="ok">Ok</string>
    <string name="nav_my_rides">My Rides</string>
    <string name="YourDriver">Your Driver</string>
    <string name="accept">ACCEPT</string>
    <string name="learn_more">Learn More</string>
    <string name="more">More</string>
    <string name="mission_leaders">Leaders: <xliff:g name="names">%s</xliff:g></string>
    <string name="until"><xliff:g name="date">%s</xliff:g> until <xliff:g name="date">%s</xliff:g></string>
    <string name="tags">Tags: <xliff:g name="tags">%s</xliff:g></string>
    <string name="show_description">Show Description</string>
    <string name="facebook_reasoning">If you log in with Facebook, you can set your RSVP directly from inside the Cru app.</string>
    <string name="facebook_no">NO, OPEN IN FACEBOOK APP</string>
    <string name="facebook_title">Log in with Facebook?</string>
    <string name="facebook_yes">SURE</string>
    <string name="no_articles_available">There are currently no articles available. Please check back later!</string>
    <string name="no_events_available">There are no events available for your current subscriptions, check that you\'re subscribed to the ministries you\'re interested in!</string>
    <string name="no_prayer_requests">There are currently no prayer requests available. Please check back later!</string>
    <string name="no_my_prayer_requests">You have yet to submit a prayer request.</string>
    <string name="no_prayer_responses">There are no responses to this prayer request. Respond if you feel led.</string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="view_upcoming_events">View Upcoming Events</string>
    <string name="not_driving">You are not currently signed up to drive to an event.</string>
    <string name="not_getting_a_ride">You are not currently signed up to get a ride to an event.</string>
    <string name="resources">Resources</string>
    <string name="view_upcoming_events_driver">View Upcoming Events</string>
    <string name="phone_number_error">Please enter a valid phone number</string>
    <string name="car_capacity_error">Value is below original car capacity</string>
    <string name="about">About</string>
    <string name="third_party">Third-Party Libraries We Are Using</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="gender_hint">Gender</string>
    <string name="create_hint">Create</string>
    <string name="create_account_success">Successfully Created Account</string>
    <string name="create_account_failure_title">Failed to Create Account</string>
    <string name="create_account_failure_message">Please make sure your information is correct</string>
    <string name="create_account_cancel">Cancel Account Creation</string>
    <string name="create_account_cancel_message">Are you sure you want to cancel account creation? All your information will be deleted</string>
    <string name="create_account_cancel_message_confirm">Account cancled</string>
    <string name="subscription_button_key">Subscription Key</string>
    <string name="subscription_button_text">Manage Subscriptions</string>
    <string name="login_button_key">Login Key</string>
    <string name="login_button_title">Leader Login</string>
    <string name="notification_checkbox_key">Notifications Key</string>
    <string name="notification_checkbox_text">Enable Notifications</string>
    <string name="notification">Notifications</string>
    <string name="create_account_key">Create Key</string>
    <string name="onboarding_shared_transition">onboarding_transition</string>
    <string name="cru_cc_desc">A family of ministries giving every student and faculty on California\'s Central Coast the opportunity to hear the Good News of Jesus Christ</string>
    <string name="contacted">Contacted</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="text_drawable">TextDrawable</string>
    <string name="text_drawable_copyright">Copyright &#169; 2014 Amulya Khare</string>
    <string name="saripaar">android-saripaar</string>
    <string name="saripaar_copyright">Copyright 2012&#8211;2015 Mobs &amp; Geeks</string>
    <string name="date_time_picker">MaterialDateTimePicker</string>
    <string name="date_time_picker_copyright">Copyright &#169; 2015 Wouter Dullaert</string>
    <string name="autofittextview">android-autofittextview</string>
    <string name="autofittextview_copyright">Copyright 2014 Grantland Chew</string>
    <string name="butterknife">butterknife</string>
    <string name="butterknife_copyright">Copyright 2013 Jake Wharton</string>
    <string name="threeten">ThreeTenABP</string>
    <string name="threeten_copyright">Copyright &#169; 2015 Jake Wharton</string>
    <string name="threetengson">ThreeTen-Backport-Gson-Adapter</string>
    <string name="threetengson_copyright">Copyright &#169; 2015 Aaron He</string>
    <string name="retrofit">retrofit</string>
    <string name="retrofit_copyright">Copyright 2013 Square, Inc.</string>
    <string name="okhttp">okhttp</string>
    <string name="okhttp_copyright">Copyright 2013 Square, Inc.</string>
    <string name="facebook">facebook-android-sdk</string>
    <string name="facebook_copyright">Copyright &#169; 2014-present, Facebook, Inc. All rights reserved.</string>
    <string name="facebook_license">
        You are hereby granted a non-exclusive, worldwide, royalty-free license to use,
        copy, modify, and distribute this software in source code or binary form for use
        in connection with the web services and APIs provided by Facebook.\n\n

        As with any software that integrates with the Facebook platform, your use of
        this software is subject to the Facebook Developer Principles and Policies
        [http://developers.facebook.com/policy/]. This copyright notice shall be
        included in all copies or substantial portions of the software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
        FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
        COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
        IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
        CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
    </string>
    <string name="reservoir">Reservoir</string>
    <string name="reservoir_copyright">Copyright &#169; 2014 Anup Cowkur</string>
    <string name="parceler">parceler</string>
    <string name="parceler_copyright">Copyright 2011&#8211;2015 John Ericksen</string>
    <string name="rxandroid">RxAndroid</string>
    <string name="rxandroid_copyright">Copyright 2015 The RxAndroid authors</string>
    <string name="rxjava">RxJava</string>
    <string name="rxjava_copyright">opyright &#169; 2016-present, RxJava Contributors.</string>
    <string name="rxpermissions">RxPermissions</string>
    <string name="rxpermissions_copyright">Copyright 2017 Thomas Bruyelle</string>
    <string name="picasso_transformations">picasso-transformations</string>
    <string name="picasso_transformations_copyright">Copyright 2017 Wasabeef</string>
    <string name="picasso">picasso</string>
    <string name="picasso_copyright">Copyright 2013 Square, Inc.</string>
    <string name="apache_license">
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

           http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>
    <string name="mit_license">
        The MIT License (MIT)\n

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:\n\n

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.\n\n

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE.
    </string>
</resources>