<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="Subscriptions">

        <Preference
            android:title="@string/subscription_button_text"
            android:key="@string/subscription_button_key"
            android:id="@+id/subscriptions_button"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/login_button_title">

        <Preference
            android:key="@string/login_button_key"
            android:id="@+id/login_button"/>
        <Preference
            android:key="@string/create_account_key"
            android:id="@+id/create_account_button"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification">

        <CheckBoxPreference
            android:key="@string/notification_checkbox_key"
            android:id="@+id/notification_checkbox"
            android:title="@string/notification_checkbox_text"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about">

        <Preference
            android:key="@string/about"
            android:id="@+id/about"
            android:title="@string/about"/>

    </PreferenceCategory>
</PreferenceScreen>