<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    dddfdsfsasd

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rsvp_group"
        android:layout_below="@+id/rsvp_progress"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone">
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_reply"
            android:textSize="16dp"
            android:layout_marginBottom="8dp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/going"
            android:textSize="16dp"
            android:layout_marginBottom="8dp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interested"
            android:textSize="16dp"
            android:layout_marginBottom="8dp"/>
    </RadioGroup>

</RelativeLayout>