<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/content"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="@string/onboarding_shared_transition">
            <ImageView
                android:id="@+id/image"
                android:layout_width="300dp"
                android:layout_height="184dp"
                android:layout_gravity="center_vertical"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/cru_logo_grey600"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="32sp"
                android:text="@string/central_coast"
                android:textColor="@color/cruGray"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/cru_cc_desc"/>
    </LinearLayout>
</FrameLayout>